# MLOps_homework

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  main.py  pyproject.toml  test_app.py
artifacts/: inference.py
